docs/api/qiskit/0.25/qiskit.algorithms.VQE.md
---
title: VQE
description: API reference for qiskit.algorithms.VQE
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.VQE
---

# qiskit.algorithms.VQE

<span id="qiskit.algorithms.VQE" />

`VQE(ansatz=None, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/algorithms/minimum_eigen_solvers/vqe.py "view source code")

The Variational Quantum Eigensolver algorithm.

[VQE](https://arxiv.org/abs/1304.3061) is a quantum algorithm that uses a variational technique to find the minimum eigenvalue of the Hamiltonian $H$ of a given system.

An instance of VQE requires defining two algorithmic sub-components: a trial state (a.k.a. ansatz) which is a `QuantumCircuit`, and one of the classical [`optimizers`](qiskit.algorithms.optimizers#module-qiskit.algorithms.optimizers "qiskit.algorithms.optimizers"). The ansatz is varied, via its set of parameters, by the optimizer, such that it works towards a state, as determined by the parameters applied to the ansatz, that will result in the minimum expectation value being measured of the input operator (Hamiltonian).

An optional array of parameter values, via the *initial\_point*, may be provided as the starting point for the search of the minimum eigenvalue. This feature is particularly useful such as when there are reasons to believe that the solution point is close to a particular point. As an example, when building the dissociation profile of a molecule, it is likely that using the previous computed optimal solution as the starting initial point for the next interatomic distance is going to reduce the number of iterations necessary for the variational algorithm to converge. It provides an [initial point tutorial](https://github.com/Qiskit/qiskit-tutorials-community/blob/master/chemistry/h2_vqe_initial_point.ipynb) detailing this use case.

The length of the *initial\_point* list value must match the number of the parameters expected by the ansatz being used. If the *initial\_point* is left at the default of `None`, then VQE will look to the ansatz for a preferred value, based on its given initial state. If the ansatz returns `None`, then a random point will be generated within the parameter bounds set, as per above. If the ansatz provides `None` as the lower bound, then VQE will default it to $-2\pi$; similarly, if the ansatz returns `None` as the upper bound, the default value will be $2\pi$.

<Admonition title="Note" type="note">
  The VQE stores the parameters of `ansatz` sorted by name to map the values provided by the optimizer to the circuit. This is done to ensure reproducible results, for example such that running the optimization twice with same random seeds yields the same result. Also, the `optimal_point` of the result object can be used as initial point of another VQE run by passing it as `initial_point` to the initializer.
</Admonition>

**Parameters**

*   **ansatz** (`Optional`\[`QuantumCircuit`]) – A parameterized circuit used as Ansatz for the wave function.
*   **optimizer** (`Optional`\[`Optimizer`]) – A classical optimizer.
*   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQE will look to the ansatz for a preferred point and if not will simply compute a random one.
*   **gradient** (`Union`\[`GradientBase`, `Callable`, `None`]) – An optional gradient function or operator for optimizer.
*   **expectation** (`Optional`\[`ExpectationBase`]) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When `None` (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
*   **include\_custom** (`bool`) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
*   **max\_evals\_grouped** (`int`) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that multiple points to compute the gradient can be passed and if computed in parallel improve overall execution time. Deprecated if a gradient operator or function is given.
*   **callback** (`Optional`\[`Callable`\[\[`int`, `ndarray`, `float`, `float`], `None`]]) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean and the evaluated standard deviation.\`
*   **quantum\_instance** (`Union`\[`Backend`, `BaseBackend`, `QuantumInstance`, `None`]) – Quantum Instance or Backend

### \_\_init\_\_

<span id="qiskit.algorithms.VQE.__init__" />

`__init__(ansatz=None, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)`

**Parameters**

*   **ansatz** (`Optional`\[`QuantumCircuit`]) – A parameterized circuit used as Ansatz for the wave function.
*   **optimizer** (`Optional`\[`Optimizer`]) – A classical optimizer.
*   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQE will look to the ansatz for a preferred point and if not will simply compute a random one.
*   **gradient** (`Union`\[`GradientBase`, `Callable`, `None`]) – An optional gradient function or operator for optimizer.
*   **expectation** (`Optional`\[`ExpectationBase`]) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When `None` (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
*   **include\_custom** (`bool`) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
*   **max\_evals\_grouped** (`int`) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that multiple points to compute the gradient can be passed and if computed in parallel improve overall execution time. Deprecated if a gradient operator or function is given.
*   **callback** (`Optional`\[`Callable`\[\[`int`, `ndarray`, `float`, `float`], `None`]]) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean and the evaluated standard deviation.\`
*   **quantum\_instance** (`Union`\[`Backend`, `BaseBackend`, `QuantumInstance`, `None`]) – Quantum Instance or Backend

## Methods

|                                                                                                                                                      |                                                                                                       |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.algorithms.VQE.__init__ "qiskit.algorithms.VQE.__init__")(\[ansatz, optimizer, initial\_point, …])                              | **type ansatz**`Optional`\[`QuantumCircuit`]                                                          |
| [`cleanup_parameterized_circuits`](#qiskit.algorithms.VQE.cleanup_parameterized_circuits "qiskit.algorithms.VQE.cleanup_parameterized_circuits")()   | set parameterized circuits to None                                                                    |
| [`compute_minimum_eigenvalue`](#qiskit.algorithms.VQE.compute_minimum_eigenvalue "qiskit.algorithms.VQE.compute_minimum_eigenvalue")(operator\[, …]) | Computes minimum eigenvalue.                                                                          |
| [`construct_circuit`](#qiskit.algorithms.VQE.construct_circuit "qiskit.algorithms.VQE.construct_circuit")(parameter, operator)                       | Return the circuits used to compute the expectation value.                                            |
| [`construct_expectation`](#qiskit.algorithms.VQE.construct_expectation "qiskit.algorithms.VQE.construct_expectation")(parameter, operator)           | Generate the ansatz circuit and expectation value measurement, and return their runnable composition. |
| [`find_minimum`](#qiskit.algorithms.VQE.find_minimum "qiskit.algorithms.VQE.find_minimum")(\[initial\_point, ansatz, …])                             | Optimize to find the minimum cost value.                                                              |
| [`get_optimal_circuit`](#qiskit.algorithms.VQE.get_optimal_circuit "qiskit.algorithms.VQE.get_optimal_circuit")()                                    | Get the circuit with the optimal parameters.                                                          |
| [`get_optimal_cost`](#qiskit.algorithms.VQE.get_optimal_cost "qiskit.algorithms.VQE.get_optimal_cost")()                                             | Get the minimal cost or energy found by the VQE.                                                      |
| [`get_optimal_vector`](#qiskit.algorithms.VQE.get_optimal_vector "qiskit.algorithms.VQE.get_optimal_vector")()                                       | Get the simulation outcome of the optimal circuit.                                                    |
| [`get_prob_vector_for_params`](#qiskit.algorithms.VQE.get_prob_vector_for_params "qiskit.algorithms.VQE.get_prob_vector_for_params")(…\[, …])        | Helper function to get probability vectors for a set of params                                        |
| [`get_probabilities_for_counts`](#qiskit.algorithms.VQE.get_probabilities_for_counts "qiskit.algorithms.VQE.get_probabilities_for_counts")(counts)   | get probabilities for counts                                                                          |
| [`print_settings`](#qiskit.algorithms.VQE.print_settings "qiskit.algorithms.VQE.print_settings")()                                                   | Preparing the setting of VQE into a string.                                                           |
| [`supports_aux_operators`](#qiskit.algorithms.VQE.supports_aux_operators "qiskit.algorithms.VQE.supports_aux_operators")()                           | Whether computing the expectation value of auxiliary operators is supported.                          |

## Attributes

|                                                                                                        |                                                                                                    |
| ------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------- |
| [`ansatz`](#qiskit.algorithms.VQE.ansatz "qiskit.algorithms.VQE.ansatz")                               | Returns the ansatz                                                                                 |
| [`expectation`](#qiskit.algorithms.VQE.expectation "qiskit.algorithms.VQE.expectation")                | The expectation value algorithm used to construct the expectation measurement from the observable. |
| [`initial_point`](#qiskit.algorithms.VQE.initial_point "qiskit.algorithms.VQE.initial_point")          | Returns initial point                                                                              |
| [`optimal_params`](#qiskit.algorithms.VQE.optimal_params "qiskit.algorithms.VQE.optimal_params")       | The optimal parameters for the ansatz.                                                             |
| [`optimizer`](#qiskit.algorithms.VQE.optimizer "qiskit.algorithms.VQE.optimizer")                      | Returns optimizer                                                                                  |
| [`quantum_instance`](#qiskit.algorithms.VQE.quantum_instance "qiskit.algorithms.VQE.quantum_instance") | Returns quantum instance.                                                                          |
| [`setting`](#qiskit.algorithms.VQE.setting "qiskit.algorithms.VQE.setting")                            | Prepare the setting of VQE as a string.                                                            |

### ansatz

<span id="qiskit.algorithms.VQE.ansatz" />

`property ansatz`

Returns the ansatz

**Return type**

`Optional`\[`QuantumCircuit`]

### cleanup\_parameterized\_circuits

<span id="qiskit.algorithms.VQE.cleanup_parameterized_circuits" />

`cleanup_parameterized_circuits()`

set parameterized circuits to None

### compute\_minimum\_eigenvalue

<span id="qiskit.algorithms.VQE.compute_minimum_eigenvalue" />

`compute_minimum_eigenvalue(operator, aux_operators=None)`

Computes minimum eigenvalue. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

**Parameters**

*   **operator** (`OperatorBase`) – Qubit operator of the Observable
*   **aux\_operators** (`Optional`\[`List`\[`Optional`\[`OperatorBase`]]]) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

**Return type**

`MinimumEigensolverResult`

**Returns**

MinimumEigensolverResult

### construct\_circuit

<span id="qiskit.algorithms.VQE.construct_circuit" />

`construct_circuit(parameter, operator)`

Return the circuits used to compute the expectation value.

**Parameters**

*   **parameter** (`Union`\[`List`\[`float`], `List`\[`Parameter`], `ndarray`]) – Parameters for the ansatz circuit.
*   **operator** (`OperatorBase`) – Qubit operator of the Observable

**Return type**

`List`\[`QuantumCircuit`]

**Returns**

A list of the circuits used to compute the expectation value.

### construct\_expectation

<span id="qiskit.algorithms.VQE.construct_expectation" />

`construct_expectation(parameter, operator)`

Generate the ansatz circuit and expectation value measurement, and return their runnable composition.

**Parameters**

*   **parameter** (`Union`\[`List`\[`float`], `List`\[`Parameter`], `ndarray`]) – Parameters for the ansatz circuit.
*   **operator** (`OperatorBase`) – Qubit operator of the Observable

**Return type**

`OperatorBase`

**Returns**

The Operator equalling the measurement of the ansatz `StateFn` by the Observable’s expectation `StateFn`.

**Raises**

[**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no operator has been provided.

### expectation

<span id="qiskit.algorithms.VQE.expectation" />

`property expectation`

The expectation value algorithm used to construct the expectation measurement from the observable.

**Return type**

`ExpectationBase`

### find\_minimum

<span id="qiskit.algorithms.VQE.find_minimum" />

`find_minimum(initial_point=None, ansatz=None, cost_fn=None, optimizer=None, gradient_fn=None)`

Optimize to find the minimum cost value.

**Parameters**

*   **initial\_point** (`Optional`\[`ndarray`]) – If not None will be used instead of any initial point supplied via constructor. If None and None was supplied to constructor then a random point will be used if the optimizer requires an initial point.
*   **ansatz** (`Optional`\[`QuantumCircuit`]) – If not None will be used instead of any ansatz supplied via constructor.
*   **cost\_fn** (`Optional`\[`Callable`]) – If not None will be used instead of any cost\_fn supplied via constructor.
*   **optimizer** (`Optional`\[`Optimizer`]) – If not None will be used instead of any optimizer supplied via constructor.
*   **gradient\_fn** (`Optional`\[`Callable`]) – Optional gradient function for optimizer

**Returns**

Optimized variational parameters, and corresponding minimum cost value.

**Return type**

dict

**Raises**

**ValueError** – invalid input

### get\_optimal\_circuit

<span id="qiskit.algorithms.VQE.get_optimal_circuit" />

`get_optimal_circuit()`

Get the circuit with the optimal parameters.

**Return type**

`QuantumCircuit`

### get\_optimal\_cost

<span id="qiskit.algorithms.VQE.get_optimal_cost" />

`get_optimal_cost()`

Get the minimal cost or energy found by the VQE.

**Return type**

`float`

### get\_optimal\_vector

<span id="qiskit.algorithms.VQE.get_optimal_vector" />

`get_optimal_vector()`

Get the simulation outcome of the optimal circuit.

**Return type**

`Union`\[`List`\[`float`], `Dict`\[`str`, `int`]]

### get\_prob\_vector\_for\_params

<span id="qiskit.algorithms.VQE.get_prob_vector_for_params" />

`get_prob_vector_for_params(construct_circuit_fn, params_s, quantum_instance, construct_circuit_args=None)`

Helper function to get probability vectors for a set of params

### get\_probabilities\_for\_counts

<span id="qiskit.algorithms.VQE.get_probabilities_for_counts" />

`get_probabilities_for_counts(counts)`

get probabilities for counts

### initial\_point

<span id="qiskit.algorithms.VQE.initial_point" />

`property initial_point`

Returns initial point

**Return type**

`Optional`\[`ndarray`]

### optimal\_params

<span id="qiskit.algorithms.VQE.optimal_params" />

`property optimal_params`

The optimal parameters for the ansatz.

**Return type**

`List`\[`float`]

### optimizer

<span id="qiskit.algorithms.VQE.optimizer" />

`property optimizer`

Returns optimizer

**Return type**

`Optional`\[`Optimizer`]

### print\_settings

<span id="qiskit.algorithms.VQE.print_settings" />

`print_settings()`

Preparing the setting of VQE into a string.

**Returns**

the formatted setting of VQE

**Return type**

str

### quantum\_instance

<span id="qiskit.algorithms.VQE.quantum_instance" />

`property quantum_instance`

Returns quantum instance.

**Return type**

`Optional`\[`QuantumInstance`]

### setting

<span id="qiskit.algorithms.VQE.setting" />

`property setting`

Prepare the setting of VQE as a string.

### supports\_aux\_operators

<span id="qiskit.algorithms.VQE.supports_aux_operators" />

`classmethod supports_aux_operators()`

Whether computing the expectation value of auxiliary operators is supported.

If the minimum eigensolver computes an eigenstate of the main operator then it can compute the expectation value of the aux\_operators for that state. Otherwise they will be ignored.

**Return type**

`bool`

**Returns**

True if aux\_operator expectations can be evaluated, False otherwise

